--- a/css/property_right_activity.css
+++ b/css/property_right_activity.css
@@ -69,7 +69,6 @@ body, html {
     bottom: 0;
     left: 0;
     width:3.75rem;
-    height:1.06rem;
     background:rgba(51,48,45,1);
     text-align: center;
     overflow: hidden;
@@ -265,4 +264,33 @@ body, html {
     font-size:0.14rem;
     font-weight:400;
     color:rgba(51,51,51,1);
+}
+.topbox{
+    width: 100%;
+    height: 0.91rem;
+    display: flex;
+    justify-content: flex-start;
+    overflow: hidden;
+}
+.img1{
+    width:0.23rem;
+    height: 0.23rem;
+    vertical-align: middle;
+    margin-right: 0.09rem;
+}
+.topbox .img2{
+    width:0.28rem;
+    height: 0.18rem;
+    margin:0 0.07rem 0 0.06rem;
+}
+.browerp{
+    font-size:0.18rem;
+    font-weight:500;
+    color:rgba(255,255,255,1);
+    line-height:0.25rem;
+}
+.topbox .img3{
+    width:0.92rem;
+    height: 0.50rem;
+    margin-top:0.22rem;
 }
