--- a/css/property_right_activity.css
+++ b/css/property_right_activity.css
@@ -97,6 +97,7 @@ body, html {
     font-size:0.14rem;
     font-weight:bold;
     color:rgba(51,51,51,1);
+    margin-right: 0.29rem;
 }
 .activity_box .fixed-box .fixed-rightbtn{
     width:1.48rem;
@@ -109,7 +110,6 @@ body, html {
     font-size:0.14rem;
     font-weight:bold;
     color:rgba(51,51,51,1);
-    margin-left: 29px;
 }
 .generalframezz{
     background: rgba(0, 0, 0, 0.7);
@@ -293,4 +293,64 @@ body, html {
     width:0.92rem;
     height: 0.50rem;
     margin-top:0.22rem;
+}
+.activity_box .header-two{
+    width:3.75rem;
+    height: 7.60rem;
+    background: url(../images/two1.png) no-repeat;
+    background-size: cover;
+}
+.activity_box .time-tip-two{
+    width:3.75rem;
+    height: 4.46rem;
+    background: url(../images/two2.png) no-repeat;
+    background-size: cover;
+}
+.activity_box .protect-two{
+    width:3.75rem;
+    height: 6.22rem;
+    background: url(../images/two3.png) no-repeat;
+    background-size: cover;
+}
+.activity_box .new-person-two{
+    width:3.75rem;
+    height: 6.51rem;
+    background: url(../images/two4.png) no-repeat;
+    background-size: cover;
+    margin-bottom: 0.9rem;
+}
+.activity_box .fixed-box .fixed-rightbtn-two{
+    width:1.48rem;
+    height:0.40rem;
+    line-height:0.4rem;
+    border:0;
+    background:linear-gradient(180deg,rgba(255,239,136,1) 0%,rgba(255,164,64,1) 100%);
+    box-shadow:0px 2px 4px 0px rgba(255,220,82,0.12);
+    border-radius:0.20rem;
+    outline: none;
+    font-size:0.14rem;
+    font-weight:bold;
+    color:rgba(51,51,51,1);
+}
+.generalframezz .generalcontent .modal-img-two{
+    width:0.97rem;
+    height: 0.97rem;
+    display: flex;
+    margin: 0.13rem auto 0.13rem;
+}
+.generalframezz .generalcontent .downBtn-two{
+    width:1.49rem;
+    height:0.38rem;
+    background:linear-gradient(180deg,rgba(255,239,136,1) 0%,rgba(255,164,64,1) 100%);
+    box-shadow:0px 2px 4px 0px rgba(255,220,82,0.12);
+    border-radius:1rem;
+    border:0;
+    outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin:0 auto;
+    font-size:0.14rem;
+    font-weight:400;
+    color:rgba(51,51,51,1);
 }
